--- a/source/Report Notebook.ipynb
+++ b/source/Report Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "aba3ba68",
+   "id": "f326ecbe",
    "metadata": {},
    "source": [
     "# General"
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "924afcfb",
+   "id": "994979e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e7b473b7",
+   "id": "33f0cee2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "de6ff833",
+   "id": "1edfd376",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "97fd5d52",
+   "id": "23ddef3c",
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab857e15",
+   "id": "5b0fa685",
    "metadata": {},
    "source": [
     "# Check equal"
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0719a398",
+   "id": "578bc1ea",
    "metadata": {},
    "source": [
     "## MaxAbsScaler"
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "84b927ce",
+   "id": "ca9f9d59",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee99fdca",
+   "id": "c8dfea29",
    "metadata": {},
    "source": [
     "## MinMaxScaler"
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ef01980a",
+   "id": "c1bf9777",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76718c23",
+   "id": "08a85d33",
    "metadata": {},
    "source": [
     "# Visualize"
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a52a9b8d",
+   "id": "973754ff",
    "metadata": {},
    "source": [
     "## Chateau"
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4c505220",
+   "id": "ff73a5fb",
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8283b8a8",
+   "id": "b0cc54b5",
    "metadata": {},
    "source": [
     "## palais garnier"
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "08ca80f6",
+   "id": "9566bf42",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33671d3b",
+   "id": "e3fc27e0",
    "metadata": {},
    "source": [
     "## Lenna"
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "40e919d4",
+   "id": "2467d1ae",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "df7ce682",
+   "id": "94621466",
    "metadata": {
     "scrolled": false
    },
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a1696da8",
+   "id": "af057d65",
    "metadata": {
     "scrolled": true
    },
@@ -586,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ae591142",
+   "id": "0d233d9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,8 +595,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "2d31a1fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[160.78, 181.404, 175.357, 197.799, 266.347]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "timeCapture(\"main images/Chateau.png images/temp.png 1 256 0\", 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
-   "id": "9563053b",
+   "id": "925b71b8",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a8aa3063",
+   "id": "bd9369a3",
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cec38942",
+   "id": "29738c58",
    "metadata": {},
    "outputs": [],
    "source": []
